package ar.utn.ba.dsi.fuenteEstatica.models.entities.hechos;

public enum EstadoRevision {
  PENDIENTE,
  ACEPTADO,
  ACEPTADO_CON_SUGERENCIAS,
  RECHAZADO
}
