package ar.utn.ba.dsi.fuenteEstatica.models.entities.solicitudes;

public enum Estados {
	ACEPTADO,
	PENDIENTE,
	RECHAZADO
}
